--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   page_transition: ^2.0.9
   http: ^0.13.5
   cool_alert: ^1.1.0
+  google_fonts: ^3.0.1
   
 
 dev_dependencies:
@@ -64,6 +65,12 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  fonts:
+  - family: Poppins
+    fonts:
+        - asset: assets/fonts/Poppins-Regular.ttf
+        - asset: assets/fonts/Poppins-Italic.ttf
+          style: italic
   assets:
     - assets/image/citranet.png
     - assets/image/background.png
